client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Dell\Downloads\kompose\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: client
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Dell\Downloads\kompose\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: VITE_API_URL
              value: /api
          image: cloudala/client
          name: client
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1500Mi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
      restartPolicy: Always
