neo4j-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kompose.cmd: "C:\\Users\\Dell\\Downloads\\kompose\\kompose.exe convert -f docker-compose.yaml"
    kompose.version: "1.34.0 (cbf2835db)"
  labels:
    io.kompose.service: neo4j
  name: neo4j
spec:
  selector:
    matchLabels:
      io.kompose.service: neo4j
  serviceName: neo4j
  replicas: 1
  template:
    metadata:
      annotations:
        kompose.cmd: "C:\\Users\\Dell\\Downloads\\kompose\\kompose.exe convert -f docker-compose.yaml"
        kompose.version: "1.34.0 (cbf2835db)"
      labels:
        io.kompose.service: neo4j
    spec:
      containers:
        - name: neo4j
          image: neo4j:4.4
          args:
            - neo4j
            - start
          ports:
            - containerPort: 7474
              protocol: TCP
            - containerPort: 7687
              protocol: TCP
          volumeMounts:
            - name: neo4j-data
              mountPath: /data
            - name: neo4j-cm1
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: neo4j-data
          persistentVolumeClaim:
            claimName: neo4j-data
        - name: neo4j-cm1
          configMap:
            name: neo4j-cm1
