server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Dell\Downloads\kompose\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Dell\Downloads\kompose\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: NEO4J_PASSWORD
              value: admin1234
            - name: NEO4J_URI
              value: bolt://neo4j:7687
            - name: NEO4J_USERNAME
              value: neo4j
            - name: PORT
              value: "4000"
          image: cloudala/server
          name: server
          ports:
            - containerPort: 4000
              protocol: TCP
      restartPolicy: Always
